--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
     --bold: assistantBold;
     /* font sizes */
     --small: 16px;
+    --medium: 32px;
     --large: 40px;
     /* colors */
     --background: #fff;
@@ -79,4 +80,51 @@ button:hover {
 
 #folder-files button {
     display: none;
+}
+
+/* ----------------------------------------------------------------------------- FILE NODE SETUP */
+
+.file-node {
+    max-width: 62rem;
+    margin: auto;
+    padding: 20px;
+    display: flex;
+}
+
+.file-content {
+    margin: 0px;
+    padding: 0px;
+    width: 60%;
+}
+
+.file-content img {
+    display: block;
+    margin: 0px 10px 0px 0px;
+    padding: 0px;
+    max-width: 100%;
+    float: right;
+}
+
+.functionality {
+    margin: 0px;
+    padding: 0px;
+    width: 40%;
+}
+
+.functionality h1 {
+    margin: 0px 0px 10px 0px;
+    font-family: var(--bold);
+    font-size: var(--medium);
+}
+
+.functionality textarea {
+    display: block;
+    overflow: hidden;
+    box-sizing: border-box;
+    outline-style: none;
+    resize: none;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    border: none;
 }
